@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Run the reference environment

class WorkerOptions {
  +string MqttBroker
  +string MqttTopicFilter
  +string CouchbaseConnectionString
  +string CouchbaseUsername
  +string CouchbasePassword
  +string CouchbaseBucket
  +string RedisConnectionString
}

class ApiOptions {
  +string CouchbaseConnectionString
  +string CouchbaseUsername
  +string CouchbasePassword
  +string CouchbaseBucket
  +string RedisConnectionString
  +string[] CorsOrigins
}

interface IValidateOptions~TOptions~ {
  +Validate(name: string, options: TOptions): ValidateOptionsResult
}

class WorkerOptionsValidator {
  +Validate(name: string, options: WorkerOptions): ValidateOptionsResult
}

class ApiOptionsValidator {
  +Validate(name: string, options: ApiOptions): ValidateOptionsResult
}

interface IHealthCheck {
  +CheckHealthAsync(context: HealthCheckContext, token: CancellationToken): Task~HealthCheckResult~
}

class CouchbaseReadinessCheck {
  +CheckHealthAsync(context: HealthCheckContext, token: CancellationToken): Task~HealthCheckResult~
}

class RedisReadinessCheck {
  +CheckHealthAsync(context: HealthCheckContext, token: CancellationToken): Task~HealthCheckResult~
}

class "HealthCheckService (built-in)" as HealthCheckService {
  +CheckHealthAsync(token: CancellationToken): Task~HealthReport~
}

IValidateOptions <|.. WorkerOptionsValidator
IValidateOptions <|.. ApiOptionsValidator
WorkerOptionsValidator ..> WorkerOptions : validates
ApiOptionsValidator ..> ApiOptions : validates
IHealthCheck <|.. CouchbaseReadinessCheck
IHealthCheck <|.. RedisReadinessCheck
HealthCheckService o-- CouchbaseReadinessCheck : aggregates
HealthCheckService o-- RedisReadinessCheck : aggregates

note bottom of HealthCheckService
  ASP.NET Core's built-in aggregation serves GET /health:
  a custom response writer emits per-dependency status as
  JSON; 200 when all healthy, 503 otherwise. No hand-rolled
  aggregator exists. Structured JSON logging and levels come
  from the built-in Logging configuration in both processes.
end note
@enduml
